boreal/tests/assets/invalid_files/compilation/expression_incompatible_types6.yar
// [error: expressions have invalid types]
rule a {
    condition:
        3 == /ab/
}
